# MathForDeepLearning

./: .gitignore  main.py  package-lock.json  pyproject.toml
chapter_01/: c01.ipynb  total_probability.md
chapter_03/: PoissionDistribution.md  bayes_theorem.md  bernoulliDistribution_for_AI.md  binomial_theorem.md  ch03.ipynb  combination.md  discrete.py
chapter_04/: 4.4missingdata.ipynb  4.5.correlation.ipynb  CovarianceMatrix.ipynb  Determinant.ipynb  Euclidean Distance.ipynb  Mahalanobis Distance.ipynb  README.md  bassel_correction.ipynb  means_expected_differnece.ipynb  quantiles.py  summary.ipynb  variance.ipynb
