[project]
name = "mathfordeeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fldr>=1.4.8",
    "fldrf",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pooch>=1.9.0",
    "pygments>=2.20.0",
    "scikit-learn>=1.8.0",
]
